# trading-project-automation

./: .gitignore  README.md
04-StockTrading/ml/: README.md  pyproject.toml
04-StockTrading/ml/data/: ibkr-daily-bars.csv  ibkr-diagnostic.json  ibkr-executions.json  ibkr-instruments.json  sec-fundamentals.json  trading-history.json
04-StockTrading/ml/scripts/: build_ibkr_dashboard.py  diagnose_ibkr.py  fetch_ibkr_bars.py  fetch_ibkr_metadata.py  fetch_market_evidence.py  fetch_sec_fundamentals.py  score_latest.py  sync_ibkr_history.py  train_model.py
04-StockTrading/ml/tests/: test_ibkr.py  test_market_evidence.py  test_pipeline.py  test_readiness.py  test_sec.py  test_trading_history.py  test_training.py
07-Healthcare-DevSecOps-Governance/: .env.example  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  START-DASHBOARD.cmd  compose.yaml  pyproject.toml  run_demo_ingestion.py
07-Healthcare-DevSecOps-Governance/.github/: dependabot.yml
07-Healthcare-DevSecOps-Governance/.github/workflows/: dast.yml  deploy.yml  firmware-security.yml  ingestion-security.yml  ingestion.yml  model-security.yml  pilot-security.yml  release-readiness.yml  security.yml  stakeholder-security.yml
07-Healthcare-DevSecOps-Governance/ai/adversarial/: assessment.yaml
07-Healthcare-DevSecOps-Governance/ai/federated/: policy.yaml
07-Healthcare-DevSecOps-Governance/ai/model-security/: scan-policy.yaml
07-Healthcare-DevSecOps-Governance/data/: README.md
07-Healthcare-DevSecOps-Governance/database/alembic/: env.py
07-Healthcare-DevSecOps-Governance/database/migrations/: 001_tenant_rls.sql  004_pilot_governance.sql
07-Healthcare-DevSecOps-Governance/docs/: ARCHITECTURE.md  PRE-PRODUCTION-VALIDATION.md  SECURITY.md  runbooks.md
07-Healthcare-DevSecOps-Governance/docs/architecture/: MISSING-MODULES.md  PRODUCTION-PILOT.md
07-Healthcare-DevSecOps-Governance/docs/compliance/: CONTROL-MATRIX.md
07-Healthcare-DevSecOps-Governance/docs/governance/: AUTOMATED-INGESTION-GOVERNANCE.md  (+3 more)
07-Healthcare-DevSecOps-Governance/gateway/: envoy.yaml  zap-rules.tsv
07-Healthcare-DevSecOps-Governance/governance/: control-registry.json  production-gates.json
07-Healthcare-DevSecOps-Governance/portal/: .env.example  README.md  components.json  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.json
07-Healthcare-DevSecOps-Governance/scripts/: production_readiness.py  verify_pilot_evidence.py
07-Healthcare-DevSecOps-Governance/stakeholder-integrations/: README.md
07-Healthcare-DevSecOps-Governance/tests/: test_classifier.py  test_clinical_configs.py  test_completion_modules.py  test_crypto.py  test_database_migrations.py  test_deidentify.py  test_devsecops_hardening.py  test_ingestion_orchestrator.py  test_multitenancy.py  test_pilot_adversarial.py  test_release_security.py  test_source_governance.py  test_vault_kms.py
(+561 files in other folders)
