[build-system]
requires = ["setuptools>=78"]
build-backend = "setuptools.build_meta"

[project]
name = "healthgov-data-ingestion"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "pydantic-settings==2.9.1",
  "requests==2.32.3",
  "pydicom==3.0.1",
  "hl7apy==1.3.5",
  "pandas==2.2.3",
  "aiokafka==0.12.0",
  "python-jose[cryptography]==3.4.0",
  "python-multipart==0.0.20",
  "structlog==25.3.0",
  "prometheus-client==0.21.1",
  "asyncpg==0.30.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.5", "pytest-asyncio==0.26.0", "ruff==0.11.10"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

